# FreeHand3

./: .gitignore  CMakeLists.txt
dll/: CMakeLists.txt  DllMain.cpp  GCheat.cpp  GCheat.h  HotKeys.h  RemoveCall.h  config.h  pch.h
dll/DxHook/: D3d11Hook2.cpp  D3d11Hook2.h  EspDraw.cpp  EspDraw.hpp  IDraw.cpp  IDraw.h  NamePainter.cpp  NamePainter.h  RangeDraw.h  WndProcHooks.cpp  WndProcHooks.h  d3d11hook.cpp  d3d12hook.cpp  globals.cpp  hooks.cpp  inputhooks.cpp  namespaces.h
dll/GUI/: HUD.cpp  HUD.hpp  Module.hpp  ModuleManager.cpp  ModuleManager.hpp  imgui_helper.cpp  imgui_helper.hpp
dll/GUI/menu/: MainGui.cpp  MainGui.hpp  byte_array.h  etc_elements.cpp  etc_elements.h
dll/GUI/util/: ColorH.hpp  Keys.hpp  MH.cpp  MH.hpp
dll/Memory/: Memory.cpp  Memory.h
dll/fontLib/: Fonts.hpp
dll/hooks/: AllHooks.cpp  EchoAnyWhere.hpp  GetMarkPoint.cpp  GetMarkPoint.hpp  GetViewAngle.hpp  IHook.h  PickItemCheck.cpp  PickItemCheck.hpp  PickItemCheckHook.asm  PostRender.hpp  Shoot.hpp  hooks.asm
dll/imgui/: imgui_widgets.cpp
dll/utils/: NamePool.hpp  utils.h
lib/: CrashLogs.cpp  ThreadManager.hpp  xorstr.hpp
vmp/: VMProtectSDK.h
